--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   url_launcher: 5.4.2
   syncfusion_flutter_core: 18.2.45
   permission_handler: ^5.0.0+hotfix.6
+  font_awesome_flutter: ^8.8.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
