--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   permission_handler: ^5.0.0+hotfix.6
   font_awesome_flutter: ^8.8.1
   flutter_svg: ^0.17.4
+  modal_bottom_sheet: 0.1.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
