--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_screenutil: ^1.0.2
-  flutter_slidable: ^0.5.4
+  flutter_slidable: ^0.5.7
   azlistview: ^0.1.2
   lpinyin: ^1.0.7
   shimmer: 1.1.0
@@ -34,6 +34,7 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   flutter_svg: ^0.17.4
   modal_bottom_sheet: 0.1.4
+  vertical_tabs: ^0.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
