--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
     path: ../
   font_awesome_flutter: ^8.8.1
   cached_network_image: ^2.0.0
+  flutter_easyrefresh: ^2.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
