--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   cached_network_image: ^2.0.0
   flutter_easyrefresh: ^2.1.5
+  get: ^3.12.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
