--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   flutter_svg: ^0.19.0
   modal_bottom_sheet: ^0.2.2
+  image: ^2.1.12
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -56,7 +57,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
 #  assets:
-#    - lib/assets/result/error.png
+#    - package:flutter_components/
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
