--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,9 +50,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-#  assets:
-#    - package:flutter_components/
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - packages/flutter_components/picker/data/china_area.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
