--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   modal_bottom_sheet: ^0.2.2
   image: ^2.1.12
   uuid: ^2.2.2
+  simple_gesture_detector: ^0.1.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
